--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -44,7 +44,8 @@
                 <div class="col">{{ form_row(form.fee) }}</div>
                 <div class="col">{{ form_row(form.method) }}</div>
                 <div class="w-100"></div>
-            {{ form_end(form) }}
+                <div class="col-12">{{ form_row(form.privacy) }}</div>
+                <div class="col-12 text-center"{{ form_end(form) }}</div>
         </div>
     </div>
 {% endblock %}
